--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\fastai\\python.exe"
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe"
 }
